[tool.poetry]
name = "vikzh_brain_games"
version = "0.5.0"
description = "cli game"
authors = ["vikzh <vikt.anmail@gmail.com>"]
classifiers = [
    "Topic :: Software Development :: CLI App"
]
repository = "https://github.com/vikzh/python-project-lvl1"
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

